test/checker/fail/check_await_outside_async.ms
const foo := proc () { await bar() };
